Bug 126636 - Editor name field in docx displayed wrong
Summary: Editor name field in docx displayed wrong
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:7.4.0
Keywords: filter:docx
: 148528 (view as bug list)
Depends on: 148380
Blocks: DOCX-Fields
  Show dependency treegraph
 
Reported: 2019-07-31 10:14 UTC by Tadas Balaišis
Modified: 2022-04-29 10:36 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Actual problematic docx (237.09 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2019-07-31 10:14 UTC, Tadas Balaišis
Details
How it looks in Writer (515.50 KB, image/jpeg)
2019-07-31 10:17 UTC, Tadas Balaišis
Details
How it should be (430.93 KB, image/jpeg)
2019-07-31 10:18 UTC, Tadas Balaišis
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tadas Balaišis 2019-07-31 10:14:11 UTC
Description:
Editor name field in docx displayed wrong. MS Office and Google Docs display it correctly.

Actual Results:
Open docx in Writer. See "Tadas" (That's my name).

Expected Results:
Should be "Valdas"


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Tadas Balaišis 2019-07-31 10:14:55 UTC
Created attachment 153067 [details]
Actual problematic docx
Comment 2 Tadas Balaišis 2019-07-31 10:17:38 UTC
Created attachment 153068 [details]
How it looks in Writer
Comment 3 Tadas Balaišis 2019-07-31 10:18:07 UTC
Created attachment 153069 [details]
How it should be
Comment 4 Xisco Faulí 2019-07-31 11:24:42 UTC
Reproduced in

Version: 6.4.0.0.alpha0+
Build ID: 9ee5ad5a0b84bfa652da34694ba4f75668f06087
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

and 

Version 4.1.0.0.alpha0+ (Build ID: efca6f15609322f62a35619619a6d5fe5c9bd5a)

The fields shows the LibreOffice user information, instead of the one from the document
Comment 5 Tadas Balaišis 2020-11-17 13:31:31 UTC
I've installed version 6.4.7.2 today. And the error is still reproduced. Any progress? Or you think it's not a big deal to display incorrect document author? No chance to fix it during 15 months?
Comment 6 Tadas Balaišis 2020-12-08 09:31:19 UTC
Reproduced in 7.0.3.1.
Comment 7 Tadas Balaišis 2021-06-23 12:12:40 UTC
Reproduced in 7.1.4.2
Comment 8 Justin L 2022-04-01 06:16:33 UTC
Repro 7.4+
The mapping is correct though.  This is really picking up the field "tools - options - user information - username" (in Word 2003).  Pressing F9 on the field will update the field to show YOUR user information. So this is NOT the "create author" field.

This is basically a duplicate of bug 147861, but with a different type of variable.
Comment 9 Justin L 2022-04-28 11:59:10 UTC
*** Bug 148528 has been marked as a duplicate of this bug. ***
Comment 10 Commit Notification 2022-04-29 10:25:56 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f56f8be65b26cb3c8e83af05f10ba9f717ff76b2

tdf#126636 writerfilter: import USERNAME field as fixed

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.