tdf#126636 writerfilter: import USERNAME field as fixed

This depends on and mimics some of the fixes for tdf#148380.

Microsoft Word doesn't immediately/automatically update field contents
like LO does. Instead, the user needs to press F9 on each field.
So, these USERNAME or USERINITIALS fields just show the
when-last-updated text that was saved in the document
instead of the actual current value of the field.

Although LO doesn't have that ability, we can flag them as FIXED
and achieve a very similar result. Doing so fixes this bug report
which might be quite common since USERNAME might be mistaken
for AUTHOR or LASTSAVEDBY by the user - since in practice
they tend to be the same thing.

We already did this for AUTHOR (which is extremely safe since
that can never change). I almost hate to do it with this one
because even this bug shows it is too often a case of mis-use,
but that is the way it is, and this seems to be the best solution.

Change-Id: I48dc6d45992aff740023e80f619b56ad01231782